fixed-scrollbar sidebar commit

--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body{
     
 }
 .scroll-list{
-    height: calc(100vh - 500px);
+    height: calc(100vh - 400px);
 }
 
 .flex{
